Update 404 redirect URL

--- a/404.html
+++ b/404.html
@@ -2,11 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Refresh" content="0; url='https://25eqsg3f08-stack.github.io/repo_error.html#error_404'" />
+  <meta http-equiv="Refresh" content="0; url='https://25eqsg3f08-stack.github.io/error_404.html'" />
   <title>404 Not Found</title>
 </head>
 <body>
   <h1>404 Not Found</h1>
-  <p>The repository you are looking for does not exist or is not accessible.</p>
 </body>
 </html>
