--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>澳门街道照片浏览</title>
-    <!-- 引入Leaflet CSS（无APIKey） -->
+    <title>澳门街道影像集</title>
+    <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="stylesheet" href="./css/style.css">
     <style>
-        /* 地图样式补充（与原有样式合并，也可放入style.css） */
-        .map-container {
+        /* 地图样式 */
+        .map-wrap {
             margin: 30px 0;
-            width: 100%;
-            height: 300px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            text-align: center;
         }
         .map-title {
             margin-bottom: 10px;
             color: #333;
             font-size: 18px;
+        }
+        .map-container {
+            width: 100%;
+            height: 300px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
     </style>
 </head>
@@ -27,7 +30,7 @@
     <div class="container">
         <h1>澳门街道影像集</h1>
 
-        <!-- 新增：澳门地图区域 -->
+        <!-- 澳门地图区域 -->
         <div class="map-wrap">
             <h3 class="map-title">澳门内港拍摄区域参考</h3>
             <div id="macau-map" class="map-container"></div>
@@ -48,22 +51,22 @@
         </div>
     </div>
 
-    <!-- 引入Leaflet JS（无APIKey） -->
+    <!-- 引入外部JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <!-- 引入原有JS文件（顺序不可改） -->
     <script src="./js/repo.js"></script>
     <script src="./js/offlinecache.js"></script>
     <script src="./js/main.js"></script>
+
     <!-- 地图初始化脚本 -->
     <script>
-        // 初始化澳门地图（经纬度：22.1987° N, 113.5439° E）
-        const macauMap = L.map('macau-map').setView([22.1987, 113.5439], 14);
-        // 加载开源地图瓦片（无需APIKey）
+        // 初始化澳门地图
+        window.macauMap = L.map('macau-map').setView([22.1987, 113.5439], 14);
+        // 加载开源地图瓦片
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-        }).addTo(macauMap);
-        // 添加澳门内港标记
-        L.marker([22.1908, 113.5322]).addTo(macauMap)
+        }).addTo(window.macauMap);
+        // 添加默认标记
+        L.marker([22.1908, 113.5322]).addTo(window.macauMap)
             .bindPopup('澳门内港拍摄核心区')
             .openPopup();
     </script>
