--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>澳门街道影像集</title>
     <!-- 引入Leaflet依赖 -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="container">
@@ -48,6 +48,6 @@
 
     <!-- 引入依赖脚本 -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
