--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         </header>
 
         <div class="main-content">
-            <!-- 图片展示区 -->
+            <!-- 图片展示区（新增加载时间标签） -->
             <div class="photo-container">
                 <img id="current-photo" class="photo" alt="澳门街道照片">
                 <div id="loading">加载中...</div>
                 <div id="error" class="hidden">
                     <p>图片加载失败</p>
                 </div>
+                <div id="load-time" class="load-time hidden"></div>
             </div>
 
             <!-- 分页控件 -->
