--- a/index.html
+++ b/index.html
@@ -2,34 +2,82 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>澳门内港照片集</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { padding: 20px; font-family: Arial, Helvetica, sans-serif; }
-        h1 { text-align: center; margin-bottom: 20px; color: #333; }
-        .loading { text-align: center; padding: 20px; font-size: 16px; color: #666; }
-        #map { height: 300px; border-radius: 8px; margin: 20px 0; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-        /* 图片展示区 */
-        .photo-view { text-align: center; margin: 20px 0; }
-        .photo-view img { max-width: 80%; max-height: 500px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
-        .photo-info { margin: 10px 0; font-size: 14px; color: #666; }
-        /* 控制按钮 */
-        .controls { display: flex; justify-content: center; gap: 10px; margin: 20px 0; flex-wrap: wrap; }
-        .controls button { padding: 8px 16px; border: none; border-radius: 4px; background: #2196F3; color: #fff; cursor: pointer; }
-        .controls button:disabled { background: #ccc; cursor: not-allowed; }
-        #error { text-align: center; padding: 15px; color: #e53935; display: none; }
-        /* 邮件弹窗 */
-        .modal { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.5); z-index: 999; align-items: center; justify-content: center; }
-        .modal-content { background: #fff; padding: 20px; border-radius: 8px; width: 90%; max-width: 500px; }
-        .modal-content h3 { margin-bottom: 15px; }
-        .modal-content .form-group { margin-bottom: 12px; }
-        .modal-content label { display: block; margin-bottom: 4px; font-size: 14px; }
-        .modal-content input, .modal-content textarea { width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; }
-        .modal-content textarea { height: 100px; resize: vertical; }
-        .modal-buttons { display: flex; gap: 10px; justify-content: flex-end; margin-top: 15px; }
+        body { 
+            padding: 10px; 
+            font-family: Arial, Helvetica, sans-serif; 
+            background-color: #f5f5f5;
+        }
+        h1 { 
+            text-align: center; 
+            margin-bottom: 15px; 
+            color: #333;
+            font-size: 20px;
+        }
+        .loading { 
+            text-align: center; 
+            padding: 15px; 
+            font-size: 14px; 
+            color: #666;
+        }
+        #map { 
+            height: 200px; 
+            border-radius: 8px; 
+            margin: 15px 0; 
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
+        .photo-view { 
+            text-align: center; 
+            margin: 20px 0; 
+            position: relative;
+        }
+        .photo-view img { 
+            max-width: 100%; 
+            max-height: 60vh; 
+            border-radius: 8px; 
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            object-fit: contain;
+        }
+        .photo-info { 
+            margin: 10px 0; 
+            font-size: 14px; 
+            color: #666;
+        }
+        .controls { 
+            display: flex; 
+            justify-content: center; 
+            gap: 10px; 
+            margin: 20px 0; 
+            flex-wrap: wrap;
+        }
+        .controls button { 
+            padding: 10px 20px; 
+            border: none; 
+            border-radius: 20px; 
+            background: #2196F3; 
+            color: #fff; 
+            cursor: pointer;
+            font-size: 14px;
+            min-width: 80px;
+        }
+        .controls button:disabled { 
+            background: #ccc; 
+            cursor: not-allowed; 
+        }
+        #error { 
+            text-align: center; 
+            padding: 15px; 
+            color: #e53935; 
+            display: none;
+            background: #ffebee;
+            border-radius: 8px;
+            margin: 10px 0;
+        }
     </style>
 </head>
 <body>
@@ -47,34 +95,7 @@
         <button id="prev-btn" disabled>上一个</button>
         <button id="next-btn" disabled>下一个</button>
         <button id="print-btn" disabled>打印</button>
-        <button id="mail-btn" disabled>分享到邮件</button>
-    </div>
-
-    <!-- 邮件弹窗 -->
-    <div class="modal" id="mail-modal">
-        <div class="modal-content">
-            <h3>分享照片</h3>
-            <div class="form-group">
-                <label for="mail-title">标题</label>
-                <input type="text" id="mail-title" placeholder="澳门内港照片分享">
-            </div>
-            <div class="form-group">
-                <label for="mail-from">发送人</label>
-                <input type="text" id="mail-from" placeholder="你的名字">
-            </div>
-            <div class="form-group">
-                <label for="mail-to">收件人</label>
-                <input type="email" id="mail-to" placeholder="对方邮箱">
-            </div>
-            <div class="form-group">
-                <label for="mail-content">内容</label>
-                <textarea id="mail-content" placeholder="分享这张澳门内港的照片给你..."></textarea>
-            </div>
-            <div class="modal-buttons">
-                <button id="mail-cancel">取消</button>
-                <button id="mail-send">发送</button>
-            </div>
-        </div>
+        <button id="mail-btn" disabled>分享邮件</button>
     </div>
 
     <script src="map.js"></script>
