--- a/index.html
+++ b/index.html
@@ -27,11 +27,28 @@
             color: #6c757d;
             margin-bottom: 20px;
         }
+        #error { 
+            text-align: center; 
+            padding: 15px; 
+            color: #dc3545; 
+            display: none;
+            background: #f8d7da;
+            border-radius: 8px;
+            margin: 20px 0;
+            font-size: 16px;
+        }
+        #map { 
+            height: 200px; 
+            border-radius: 8px; 
+            margin: 20px 0; 
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            display: none; /* 无需地图可隐藏，需要则删除此行 */
+        }
         /* 图片展示区优化 */
         .photo-view { 
             text-align: center; 
             margin: 30px 0; 
-            min-height: 400px; /* 预留图片高度，避免空白塌陷 */
+            min-height: 400px; 
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -43,7 +60,7 @@
             border-radius: 12px; 
             box-shadow: 0 4px 16px rgba(0,0,0,0.1);
             object-fit: contain;
-            background: #fff; /* 图片加载前显示白色背景 */
+            background: #fff;
             padding: 10px;
         }
         .photo-info { 
@@ -55,7 +72,7 @@
         /* 按钮组布局优化 */
         .controls { 
             display: grid;
-            grid-template-columns: repeat(2, 1fr); /* 两列布局，更宽松 */
+            grid-template-columns: repeat(2, 1fr); 
             gap: 15px;
             max-width: 400px;
             margin: 0 auto;
@@ -78,37 +95,70 @@
         .controls button:hover:not(:disabled) { 
             background: #0056b3;
         }
-        #error { 
-            text-align: center; 
-            padding: 15px; 
-            color: #dc3545; 
+        /* 打印设置面板样式 */
+        #print-setting {
             display: none;
-            background: #f8d7da;
+            max-width: 400px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #fff;
             border-radius: 8px;
-            margin: 20px 0;
-            font-size: 16px;
-        }
-        /* 地图样式保留 */
-        #map { 
-            height: 200px; 
-            border-radius: 8px; 
-            margin: 20px 0; 
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            display: none; /* 若不需要地图可隐藏，需要则删除此行 */
+        }
+        #print-setting h3 {
+            text-align: center;
+            margin-bottom: 15px;
+            font-size: 18px;
+            color: #212529;
+        }
+        #print-setting .form-group {
+            margin-bottom: 12px;
+        }
+        #print-setting label {
+            display: block;
+            margin-bottom: 5px;
+            font-size: 14px;
+            color: #6c757d;
+        }
+        #print-setting input, 
+        #print-setting select, 
+        #print-setting textarea {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+        #print-setting textarea {
+            height: 60px;
+            resize: vertical;
+        }
+        #to-preview {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            background: #007bff;
+            color: #fff;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
     <h1>澳门内港照片集</h1>
-    <div class="loading">正在加载图片...</div>
+    <div class="loading" id="loading">正在加载图片...</div>
     <div id="error"></div>
     <div id="map"></div>
 
+    <!-- 图片展示区域 -->
     <div class="photo-view">
         <img id="current-photo" src="" alt="澳门内港照片" style="display: none;">
         <div class="photo-info" id="photo-info">0 / 0</div>
     </div>
 
+    <!-- 功能按钮组 -->
     <div class="controls">
         <button id="prev-btn" disabled>上一个</button>
         <button id="next-btn" disabled>下一个</button>
@@ -116,30 +166,9 @@
         <button id="mail-btn" disabled>分享邮件</button>
     </div>
 
-    <script src="map.js"></script>
-    <script src="script.js"></script>
-    <!-- 打印设置与跳转逻辑 -->
-    <script>
-        const printBtn = document.getElementById("print-btn");
-        const printSetting = document.createElement("div");
-        printSetting.id = "print-setting";
-        printSetting.style.display = "none";
-        printSetting.style.maxWidth = "400px";
-        printSetting.style.margin = "20px auto";
-        printSetting.style.padding = "20px";
-        printSetting.style.background = "#fff";
-        printSetting.style.borderRadius = "8px";
-        printSetting.style.boxShadow = "0 2px 8px rgba(0,0,0,0.1)";
-        printSetting.innerHTML = `
-            <h3 style="text-align:center; margin-bottom:15px; font-size:18px;">打印设置</h3>
-            <div style="margin-bottom:10px;">
-                <label style="display:block; margin-bottom:5px; font-size:14px; color:#6c757d;">标题</label>
-                <input type="text" id="print-title" style="width:100%; padding:8px; border:1px solid #ddd; border-radius:4px;" placeholder="澳门内港照片">
-            </div>
-            <div style="margin-bottom:10px;">
-                <label style="display:block; margin-bottom:5px; font-size:14px; color:#6c757d;">图片尺寸</label>
-                <select id="print-size" style="width:100%; padding:8px; border:1px solid #ddd; border-radius:4px;">
-                    <option value="original">实际大小</option>
-                    <option value="50%">50%</option>
-                    <option value="75%">75%</option>
-                    
+    <!-- 打印设置面板（内嵌DOM，无需弹窗） -->
+    <div id="print-setting">
+        <h3>打印参数设置</h3>
+        <div class="form-group">
+            <label for="print-title">打印标题</label>
+            <input type="text" id="print-title" placeh
